# email_to_webhook

./: Cargo.toml  README.md  shell.nix  test_email.txt
.github/workflows/: rust.yml
src/: main.rs
