[package]
name = "email_to_webhook"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
mailparse = "0.13.5"
reqwest = {version = "0.11.4", features = ["blocking", "json"]}
serde_json = "1.0.66"
